Fix: Configurer les fonctions Serverless pour Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,16 @@
 {
-  "rewrites": [{ "source": "/:path*", "destination": "/index.html" }]
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "nodejs18.x"
+    },
+    "api/**/*.mjs": {
+      "runtime": "nodejs18.x"
+    }
+  },
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
+    }
+  ]
 }
