--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tsparticles/react": "^3.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/react-router-dom": "^5.3.3",
     "@vercel/blob": "^1.1.1",
@@ -35,7 +36,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "styled-components": "^6.1.19",
-    "swiper": "^11.2.8"
+    "swiper": "^11.2.8",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
