--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "@types/bcrypt": "^5.0.2",
     "@types/react-router-dom": "^5.3.3",
     "@vercel/blob": "^1.1.1",
@@ -36,8 +37,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "styled-components": "^6.1.19",
-    "swiper": "^11.2.8",
-    "tsparticles-slim": "^2.12.0"
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
